--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chartist": "0.11.4",
     "core-js": "3.21.1",
     "google-maps": "4.3.3",
+    "sweetalert2": "^11.6.8",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
@@ -25,15 +26,9 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.15",
-    "@vue/cli-plugin-eslint": "4.5.15",
     "@vue/cli-plugin-router": "4.5.15",
     "@vue/cli-service": "4.5.15",
-    "@vue/eslint-config-prettier": "6.0.0",
-    "babel-eslint": "10.1.0",
     "es6-promise": "4.2.8",
-    "eslint": "7.32.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-vue": "7.20.0",
     "prettier": "2.6.0",
     "sass": "1.49.9",
     "sass-loader": "10.2.1",
