--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "vue-social-sharing": "3.0.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.15",
-    "@vue/cli-plugin-router": "4.5.15",
-    "@vue/cli-service": "4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "es6-promise": "4.2.8",
     "prettier": "2.6.0",
     "sass": "1.49.9",
