--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "3.21.1",
     "google-maps": "4.3.3",
     "sweetalert2": "^11.6.8",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
