--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-github-buttons": "3.1.0",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "3.5.2",
+    "vue-sessionstorage": "^1.0.0",
     "vue-slick-carousel": "^1.0.6",
     "vue-social-sharing": "3.0.9"
   },
