--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.23.1",
     "chartist": "0.11.4",
     "core-js": "3.21.1",
+    "firebase": "^8.10.0",
     "google-maps": "4.3.3",
     "sweetalert2": "^11.6.8",
     "vue": "^2.6.14",
