--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "3.21.1",
     "google-maps": "4.3.3",
     "sweetalert2": "^11.6.8",
+    "typeahead-autocomplete": "^1.0.9",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-chartjs": "^4.1.2",
