--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.9.1",
     "chartist": "0.11.4",
     "core-js": "3.21.1",
+    "firebase": "^9.14.0",
     "google-maps": "4.3.3",
     "sweetalert2": "^11.6.8",
     "typeahead-autocomplete": "^1.0.9",
