--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chartist": "0.11.4",
     "core-js": "3.21.1",
     "firebase": "^9.14.0",
+    "fontawesome": "^5.6.3",
     "google-maps": "4.3.3",
     "sweetalert2": "^11.6.8",
     "typeahead-autocomplete": "^1.0.9",
